# air-combat-agent-demo

./: .gitignore  README.md
.github/workflows/: python-tests.yml
air-combat-agent-demo/: pyproject.toml
air-combat-agent-demo/scripts/: inspect_mappo_flow.py  run_rule_baseline.py
air-combat-agent-demo/src/aircombat_agent/algorithms/: mappo_interfaces.py
air-combat-agent-demo/src/aircombat_agent/tactics/: rule_based_pincer.py
air-combat-agent-demo/src/aircombat_agent/utils/: geometry.py
air-combat-agent-demo/tests/: test_env.py
src/aircombat_agent/envs/: simple_air_combat_env.py
